--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="line"></div>
         <br>
         <br>
-        <a href="https://www.chess.com/" target="_blank"><h2>Play on number 1 chess site</h2></a>
-        <a href="https://lichess.org/login" target="_blank"><h2>Lichess</h2></a>
+        <a href="https://urldefense.com/v3/__https://www.chess.com/__;!!A4F2R9G_pg!MkGrYW0vhYFxdLAGTZU8XWQ08cezC4qf6-s2TR16UXv28rSIktvf7yLJlG_buILWjDY$" target="_blank"><h2>Play on number 1 chess site</h2></a>
+        <a href="https://urldefense.com/v3/__https://lichess.org/login__;!!A4F2R9G_pg!MkGrYW0vhYFxdLAGTZU8XWQ08cezC4qf6-s2TR16UXv28rSIktvf7yLJlG_bUwTlsjE$" target="_blank"><h2>Lichess</h2></a>
         
     </section>
     <section id="footer">
@@ -84,7 +84,7 @@
     <section id="Inspiration">
         <h1>My inspiration</h1>
         <div class="line"></div>
-       <a href="https://en.wikipedia.org/wiki/Magnus_Carlsen" target="_blank">
+       <a href="https://urldefense.com/v3/__https://en.wikipedia.org/wiki/Magnus_Carlsen__;!!A4F2R9G_pg!MkGrYW0vhYFxdLAGTZU8XWQ08cezC4qf6-s2TR16UXv28rSIktvf7yLJlG_bfkl2OYw$" target="_blank">
            <h1>Click on this to learn more about Magnus.</h1>
         </a>
         <img src="Magnus.jpg">
